# botsch-kobbelt-remesher-interps

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: adaptive_remesh_botsch.cpp  adaptive_remesh_botsch.h  collapse_edges.cpp  collapse_edges.h  equalize_valences.cpp  equalize_valences.h  nanobind_bindings.cpp  split_edges.cpp  split_edges.h  split_edges_until_bound.cpp  split_edges_until_bound.h  tangential_smoothing.cpp  tangential_smoothing.h
src/bkremeshlerps/: __init__.py
