[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "bkremeshlerps"
version = "0.0.1"
description = "Botsch-Kobbelt remesher supporting arbitrary vertex attributes and selections"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "namanh", email = "namanh@uchicago.edu" },
]
classifiers = [
    "License :: GPL-3.0-only",
]
# Optional: runtime dependency specification
dependencies = [ "numpy" ]

[project.urls]
Homepage = "https://github.com/namanhd/botsch-kobbelt-remesher-interps"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
